--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,19 @@
          location permissions for the 'MyLocation' functionality.
     -->
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name=".data.GlobalVariable"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -39,13 +42,13 @@
             android:parentActivityName=".ui.login.LoginActivity"
             android:theme="@style/AppTheme">
         </activity>
-        <activity
-            android:name=".ServiceActivity"
-            android:parentActivityName=".ui.login.LoginActivity"
-            android:theme="@style/AppTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.myapplication.ui.login.LoginActivity" />
+        <activity android:name=".ServiceActivity"
+            android:theme="@style/AppTheme"
+            android:parentActivityName=".ui.login.LoginActivity">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+
+            android:value="com.example.myapplication.ui.login.LoginActivity"/>
         </activity>
         <activity
             android:name=".ui.login.LoginActivity"
@@ -56,6 +59,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".data.API_DB"
+            android:enabled="true" />
     </application>
-
 </manifest>
